# twinThingWizFi360Example

./: .gitmodules  CMSIS_FreeRTOS_include.cmake  CMakeLists.txt  FreeRTOS-coreMQTT-Agent.cmake  FreeRTOS-coreMQTT.cmake  README.md  WizFi360_import.cmake  iot_socket_import.cmake  tiny-json.cmake  wizfi360_evb_pico_c-patch.cmake
port/CoreMQTT-Agent/: freertos_agent_message.h
port/FreeRTOS-Kernel/: FreeRTOSConfig.jon
port/WizFi360/inc/: WiFi_WizFi360_Config.h
port/twinThing/: MQTTConfig.h
py/: get.py  ping.py  pingAll.py  set.py
src/: CMakeLists.txt  Credentials.env  ExampleAgentObserver.cpp  ExampleAgentObserver.h  StateExample.cpp  StateExample.h  main.cpp
test/: CMakeLists.txt  NetConn.cpp  NetConn.h  TestTrans.cpp  TestWifi.cpp  TestWifi.h  main.cpp
